Fixing Dark Mode for DSGVO

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,5 +365,8 @@ summary{
   .modal-footer a{
     color:white!important;
   }
+  .dsgvo{
+    color:white;
+  }
 }
 
